make sure all rows are visible on ordering page

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -164,6 +164,11 @@ span.unused {
   }
 }
 
+.new_group_order, .edit_group_order {
+  // extra margin below to make sure all rows are visible
+  margin-bottom: 140px;
+}
+
 #order-footer {
   width: 100%;
   right: 0;
